objects/WebCart.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_B2B_B2C_INDICATOR__c</fullName>
        <formula>TEXT(PMC_DH_Account__r.PMC_SS_CustomerType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B2B_B2C_INDICATOR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_CartItem_Count__c</fullName>
        <label>CartItem Count</label>
        <summaryForeignKey>CartItem.CartId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PMC_DH_CartReferenceNumber__c</fullName>
        <description>This web reference number will be used for SAP Scheduling table integration 
MD-{CartReferenceNumber}-{GroupNumber}-{ShipmentLineNumber}</description>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>SAP Interface 203 Cart Reference Number</inlineHelpText>
        <label>CartReferenceNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Cart_Number__c</fullName>
        <displayFormat>C-{00000}</displayFormat>
        <label>Cart Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ContractEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ContractStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_EMPTYCONST__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>EMPTYCONST</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_GetPriceCallComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of GDASF-6229. The field is to identify the Get Price callout is completed on the cloned quote and to remove the banner message asking AM / CSR to make the Get Price callout.</description>
        <label>Get Price Call Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_IntegrationMessage__c</fullName>
        <description>Created as part of GDASF-6862. This field will capture the integration response message</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>receives the Integration response message</inlineHelpText>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_DH_IntegrationStatus__c</fullName>
        <description>Created as part of GDASF-6862. This field will capture the overall integration status.</description>
        <inlineHelpText>Indicates the over all integration status</inlineHelpText>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Open Credit</fullName>
                </value>
                <value>
                    <fullName>Boletos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Against Documents</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 7 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 10 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 15 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 45 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Doc - 60 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 90 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents-120 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents-180 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>
                <value>
                    <fullName>Net 1 Day - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 2 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 3 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>05 Days - Document Lock Date</fullName>
                </value>
                <value>
                    <fullName>Net 7 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 10 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 14 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 15 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 17 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 21 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 28 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 29 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 30 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 31 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 35 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 42 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 45 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 70 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 75 Days - From Invoicing Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_PrepaymentDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prepayment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_PrimaryBusinessType__c</fullName>
        <formula>IF(AND(!ISNULL(TEXT((PMC_DH_Account__r.Owner.PMC_CPQ_PrimaryBusinessType__c))),! ISBLANK(TEXT( PMC_DH_Account__r.Owner.PMC_CPQ_PrimaryBusinessType__c))),TEXT(PMC_DH_Account__r.Owner.PMC_CPQ_PrimaryBusinessType__c),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Business Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_QuoteFriendlyName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Friendly Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SAP_CONSTANT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP CONSTANT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SCHED_AGREEMENT__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>SCHED AGREEMENT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SalesAgreementEndDate__c</fullName>
        <formula>IF( PMC_DH_SalesAgreement__c!=NULL,  PMC_DH_SalesAgreement__r.EndDate ,  DATEVALUE( CreatedDate )   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SalesAgreementStartDate__c</fullName>
        <formula>IF(PMC_DH_SalesAgreement__c!=NULL, PMC_DH_SalesAgreement__r.StartDate,  DATEVALUE( CreatedDate ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SalesAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Agreement</label>
        <referenceTo>SalesAgreement</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SalesArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area</label>
        <referenceTo>PMC_SS_SalesArea__c</referenceTo>
        <relationshipLabel>Carts</relationshipLabel>
        <relationshipName>Carts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_WebCarts</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>GrandTotalAmount</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <columns>Account</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Type</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>All Active Carts</label>
    </listViews>
    <listViews>
        <fullName>North_America_Active_Carts</fullName>
        <columns>Owner</columns>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>GrandTotalAmount</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>MD Active Carts</label>
    </listViews>
    <listViews>
        <fullName>Owned_WebCarts</fullName>
        <columns>Name</columns>
        <columns>CreatedDate</columns>
        <columns>GrandTotalAmount</columns>
        <columns>Status</columns>
        <columns>Account</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Type</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>My Active Carts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>